2022-06-16  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/groff/groff.cpp (help): Revise usage message for
	expressiveness and clarity.

2022-06-10  Deri James  <deri@chuzzlewit.myzen.co.uk>

	[gropdf]: Correct display of pathnames used.

	* font/devpdf/util/BuildFoundries.pl: Convert array to
	string of pathnames.

2022-06-10  Deri James  <deri@chuzzlewit.myzen.co.uk>

	[gropdf]: Fix to gropdf.

	* src/devices/gropdf/gropdf.pl: If pdfbookmark was called
	within 5p of top of page (e.g. straight after a .bp when
	\n[nl] was zero) the click destination would be off by a
	page.

2022-06-19  Ingo Schwarze <schwarze@openbsd.org>

	* font/devpdf/devpdf.am: Always build PDF font description
	files.

	Build font/devpdf/download and the various TR, TB, CR etc.
	files in the same directory even when they are not required
	by the build because USE_GROPDF is unset, usually because
	ghostscript is either unavailable or deliberately disabled
	by the person running the build.  These files need to be
	built and installed anyway, and can be used on the target
	sytem when the required infrastructure is available at run
	time.

2022-06-15  G. Branden Robinson <g.branden.robinson@gmail.com>

	[docs]: Revise introduction of vertical spacing context to avoid
	render inference that the formatter will compute a vertical
	spacing appropriate to the type size automagically--it will not.

	Fixes <https://savannah.gnu.org/bugs/?62617>.  Thanks to Dave
	Kemper for the report.

2022-06-15  G. Branden Robinson <g.branden.robinson@gmail.com>

	[docs]: Revise discussion of end-of-sentence detection.

	* doc/groff.texi (Filling):
	* man/roff.7.man (Concepts): Do it.  "Spaces" is a now a term
	with a much more restricted usage.  Emphasize the input context,
	now explicitly identified as plain text files with Unix line
	endings.

	Fixes (one hopes) <https://savannah.gnu.org/bugs/?62593>.
	Thanks to Ingo Schwarze for the report and Dave Kemper for the
	discussion.
